# cred402

./: .env.example  .gitignore  PRODUCTION.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  deploys.addresses.txt  deploys.testnet.json  deploys.transactions.json  package-lock.json  package.json  render.yaml  tsconfig.json
agents/: base_agent.ts  buyer_agent.ts  credit_agent.ts  dispute_judge_agent.ts  economy.ts  evidence_seller_agent.ts  index.ts  liquidity_router_agent.ts  treasury_agent.ts  watchdog_agent.ts
api/: server.ts  state.ts
cli/: cred402.ts
contracts/: Cargo.toml  README.md  deploy_all_testnet.sh  finalize_deploy.sh  rust-toolchain.toml  scaffold_livenet.py
contracts/agent_credit_pool/: Cargo.toml  Odra.toml
contracts/agent_credit_pool/src/: lib.rs
contracts/agent_passport/: Cargo.toml  Odra.toml
contracts/agent_passport/src/: lib.rs
contracts/agent_registry/: Cargo.toml  Odra.toml
contracts/agent_registry/src/: lib.rs
contracts/bitcoin/adapters/: inscription_anchor_parser.ts  payment_reference_parser.ts  psbt_receipt_builder.ts
contracts/cosmos/: README.md
contracts/cosmos/cw-cred402-receipt-outbox/: Cargo.toml
contracts/cosmos/cw-cred402-receipt-outbox/src/: canonical.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/cosmos/cw-cred402-rwa-mirror/: Cargo.toml
contracts/cosmos/cw-cred402-rwa-mirror/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/cosmos/cw-cred402-satellite-registry/: Cargo.toml
contracts/cosmos/cw-cred402-satellite-registry/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/dispute_court/: Cargo.toml  Odra.toml
contracts/dispute_court/src/: lib.rs
contracts/evm/: README.md  foundry.toml
contracts/evm/cache/: solidity-files-cache.json
contracts/evm/script/: Deploy.s.sol
contracts/evm/src/: Cred402AddressBindingMirror.sol  Cred402CreditNoteVerifier.sol  Cred402CreditVault.sol  Cred402DisputeMirror.sol  Cred402EmergencyPause.sol  Cred402EvidenceOutbox.sol  Cred402ExposureReporter.sol  Cred402RWAMirror.sol  Cred402RealFiMirror.sol  Cred402ReceiptInbox.sol  Cred402ReceiptOutbox.sol  Cred402SatelliteRegistry.sol
contracts/evm/src/interfaces/: ICasperSigVerifier.sol
contracts/fiat_receipt_registry/: Cargo.toml  Odra.toml
contracts/fiat_receipt_registry/src/: lib.rs
contracts/governance/: Cargo.toml  Odra.toml
contracts/governance/src/: lib.rs
contracts/move/: Move.toml
contracts/move/sources/: cred402_credit_note_verifier.move  cred402_credit_vault.move  cred402_receipt_outbox.move  cred402_rwa_mirror.move  cred402_satellite_registry.move
contracts/operator_verification_registry/: Cargo.toml  Odra.toml
contracts/operator_verification_registry/src/: lib.rs
contracts/realfi_attestation_registry/: Cargo.toml  Odra.toml
contracts/realfi_attestation_registry/src/: lib.rs
contracts/reputation_engine/: Cargo.toml  Odra.toml
contracts/reputation_engine/src/: lib.rs
contracts/risk_policy_manager/: Cargo.toml  Odra.toml
contracts/risk_policy_manager/src/: lib.rs
contracts/rwa_asset_registry/: Cargo.toml  Odra.toml
contracts/rwa_asset_registry/src/: lib.rs
contracts/rwa_evidence_registry/: Cargo.toml  Odra.toml
contracts/rwa_evidence_registry/src/: lib.rs
contracts/slashing_vault/: Cargo.toml  Odra.toml
contracts/slashing_vault/src/: lib.rs
contracts/solana/: Anchor.toml  Cargo.toml  README.md
contracts/solana/programs/cred402_credit_vault/: Cargo.toml
contracts/solana/programs/cred402_credit_vault/src/: lib.rs
contracts/solana/programs/cred402_evidence_mirror/: Cargo.toml
contracts/solana/programs/cred402_evidence_mirror/src/: lib.rs
contracts/solana/programs/cred402_exposure_reporter/: Cargo.toml
contracts/solana/programs/cred402_exposure_reporter/src/: lib.rs
contracts/solana/programs/cred402_receipt_outbox/: Cargo.toml
contracts/solana/programs/cred402_receipt_outbox/src/: lib.rs
contracts/solana/programs/cred402_satellite_registry/: Cargo.toml
contracts/solana/programs/cred402_satellite_registry/src/: lib.rs
contracts/x402_receipt_registry/: Cargo.toml  Odra.toml
contracts/x402_receipt_registry/src/: lib.rs
docs/: architecture.md  demo_script.md  p1.md  p10.md  p2.md  p3.md  p4.md  p5.md  p6.md  p7.md  p8.md  p9.md  risk_model.md  x402_flow.md
examples/: paid-api-x402.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
infra/: Dockerfile  README.md  docker-compose.yml
mcp/: resources.ts  server.ts  server_sdk.ts  tools.ts
scripts/: casper_health.ts  demo_bureau.ts  deploy_one.mjs  deploy_testnet.ts  export_graphql_sdl.ts  gateway_demo.ts  marketplace_demo.ts  mcp_demo.ts  multichain_demo.ts  realfi_demo.ts  record_demo.mjs  render.ts  run_demo_flow.ts  sdk_demo.ts  seed_demo_agents.ts  ship_first_check.ts  sidecar_watch.ts  simulate.ts  status.ts  steps.ts  universal_credit_demo.ts  x402_client.ts
sdk/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/cred402/: __init__.py  client.py  errors.py  models.py  x402.py
sdk/python/examples/: autonomous_agent.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: error.rs  lib.rs  types.rs
services/agent-orchestrator/: README.md  audit_log.jsonl  pyproject.toml  run.py
services/agent-orchestrator/orchestrator/: __init__.py  agent.py  audit.py  ed25519.py  planner.py  policy.py  tools.py
services/agent-orchestrator/orchestrator/agents/: __init__.py  credit_agent.py  treasury_agent.py
services/risk-engine/: README.md  cli.py  pyproject.toml
services/risk-engine/cred402_risk/: __init__.py  client.py  credit_score.py  features.py  fraud_graph.py  server.py
test/: agent_compare.test.ts  agent_dossier.test.ts  agent_health.test.ts  agent_multichain.test.ts  batch_register.test.ts  bureau_integration.test.ts  bureau_surfaces.test.ts  casper_sdk.test.ts  casper_sidecar.test.ts  category_analytics.test.ts  chain_manifest.test.ts  cred402.test.ts  credit_cost.test.ts  credit_data_commons.test.ts  credit_history.test.ts  credit_offers.test.ts  credit_oracle.test.ts  p4_p5.test.ts  (+40 more)
(+262 files in other folders)
