[package]
name = "agent_passport"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true }
odra-casper-livenet-env = { version = "2", optional = true }

[dev-dependencies]
odra-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
livenet = ["dep:odra-casper-livenet-env"]

[[bin]]
name = "agent_passport_build_contract"
path = "src/bin/build_contract.rs"
test = false

[[bin]]
name = "livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]

[build-dependencies]
odra-build = "2"
