[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cred402"
version = "0.1.0"
description = "Python SDK for Cred402 — credit lines for autonomous RWA agents on Casper (x402 revenue -> on-chain reputation -> DeFi credit)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cred402" }]
keywords = ["cred402", "casper", "x402", "rwa", "defi", "credit", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero runtime dependencies — standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/cred402/cred402"
Repository = "https://github.com/cred402/cred402"

[tool.setuptools.packages.find]
where = ["."]
include = ["cred402*"]
