[package]
name = "cred402_credit_vault"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Cred402 Solana satellite — cred402_credit_vault"

[lib]
crate-type = ["cdylib", "lib"]
name = "cred402_credit_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = "0.30.1"
