[package]
name = "cred402_satellite_registry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Cred402 Solana satellite — cred402_satellite_registry"

[lib]
crate-type = ["cdylib", "lib"]
name = "cred402_satellite_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
